# agentic-web-poisoning-lab

./: .env.example  .gitignore  CITATION.cff  Makefile  README.md  SECURITY.md  pyproject.toml
data/: manual-audit.hosted-a8-a9-boundary.jsonl  manual-audit.hosted-challenge.jsonl  manual-audit.hosted-strict-challenge.jsonl  pages.boundary-expanded.jsonl  pages.boundary.jsonl  pages.challenge.jsonl  pages.graph-long-v2.jsonl  pages.graph-long.jsonl  pages.graph.jsonl  pages.seed.jsonl  tasks.boundary-expanded.jsonl  tasks.boundary.jsonl  tasks.challenge.jsonl  tasks.graph-long-v2.jsonl  tasks.graph-long.jsonl  tasks.graph.jsonl  tasks.seed.jsonl
docs/: azure-spend-plan.md  benchmark-spec.md  blind-audit-label-schema.md  blind-audit-validation.md  demo-script.md  extended-abstract.md  hosted-boundary-summary.md  hosted-challenge-summary.md  hosted-focused-summary.md  hosted-full-summary.md  hosted-graph-summary.md  hosted-long-graph-preservation-summary.md  hosted-long-graph-summary.md  hosted-long-graph-v2-cross-model-summary.md  hosted-long-graph-v2-summary.md  hosted-relation-boundary-repeats-summary.md  hosted-relation-boundary-summary.md  hosted-relation-calibrated-expanded-summary.md  hosted-relation-classifier-expanded-summary.md  hosted-relation-gate-expanded-summary.md  hosted-relation-gate-repeats-summary.md  hosted-strict-challenge-summary.md  labeling-rubric.md  long-graph-v2-corpus-card.md  long-graph-v2-preservation-casebook.md  long-graph-v2-preservation-transition-analysis.md  long-graph-v2-public-artifact-validation.md  manual-audit-protocol.md  (+13 more)
(+58 files in other folders)
