[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-web-poisoning-lab"
version = "0.1.0"
description = "Synthetic benchmark for agentic web poisoning and indirect prompt-injection evaluation."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
